# simple-windows-divider

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  config.example.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  anti-cheat.md  architecture.md  build-and-test.md  configuration.md  features.md
src/: action.rs  app.rs  fsutil.rs  hotkey.rs  layouts.rs  lib.rs  main.rs  occupancy.rs  tray.rs  watcher.rs  window_style.rs
src/app/: arrange.rs  hotkeys.rs  mod.rs  restore.rs  snap_control.rs  store.rs
src/config/: mod.rs  schema.rs
src/layout/: geometry.rs  grid.rs  mod.rs  placement.rs
src/win/: autostart.rs  convert.rs  dpi.rs  guard.rs  hotkey.rs  message_window.rs  mod.rs  monitor.rs  singleton.rs  snap.rs  window_info.rs  window_ops.rs  winevent.rs
